# mdnx-auto-dl

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.dev  README.md  alembic.ini  docker-compose.yaml  extra-specials.yaml  pyproject.toml  remote-specials.yaml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  special-episode.yml
.github/workflows/: docker-active.yml  docker-base.yml  docker-test.yml  docker.yml  release-dev.yml  release-pr.yml  release.yml  retag-latest.yml  test.yml  update-mdnx.yml
__helpers/: README.md
__helpers/CR_simulcast_config_gen/: gen.py  pyproject.toml
app/: .dockerignore  Dockerfile  app.py  entrypoint.sh  headless.py  migration_runner.sh
app/__appdata__/modules/: Vars.py
app/appdata/config/: config.json
app/appdata/migrations/: 2.4.0_migration.sh
app/appdata/modules/: CR_MDNX_API.py  ExtraSpecials.py  FileHandler.py  FileManager.py  Globals.py  HIDIVE_MDNX_API.py  LogManager.py  MDNX_API.py  MainLoop.py  MediaServerManager.py  Notification.py  NotificationManager.py  QueueManager.py  RemoteSpecials.py  ServiceHelper.py  Transcode.py  (+2 more)
app/docker/: Dockerfile  compose.yaml
appdata/config/: config.json  config.yaml  migrations.json  ntfy.sh  queue.json
docs/: README.md  config-options.md  get-started.md  mdnx-get-started.md  zlo-get-started.md
docs/guides/: README.md  mdnx.md  media-servers.md  notifications.md  organizing-files.md  series-overrides.md  zlo.md
src/app/: Dockerfile  app.py  entrypoint.sh
src/webui/: Dockerfile  app.py  entrypoint.sh
(+39 files in other folders)
