[project]
name = "mdnx-auto-dl"
version = "3.1.0"
description = "Automated downloader for MDNX and ZLO tools."
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests>=2.33.0",
    "pydantic>=2.13.0",
    "PyYAML>=6.0.0",
    "alembic>=1.18.0",
    "SQLAlchemy>=2.0.15",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
preview = true
extend-exclude = [
  "app/appdata/modules/db/alembic/versions"  # auto generated alembic migration files
]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "UP", "RUF"]
ignore = ["E501", "UP015", "E712"]
extend-select = ["TID252"]
